objects/wkcc__CmdCtrLogEvent__e.object
<CustomObject>
    <fields>
        <fullName>wkcc__ClassName__c</fullName>
        <description>Class Name attribute to this log event</description>
        <label>Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkcc__Level__c</fullName>
        <description>Logging Level for this event. Available values are ERROR,WARN,DEBUG, or INFO.</description>
        <label>Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkcc__Message__c</fullName>
        <description>Message for this log event</description>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>wkcc__ObjectIDs__c</fullName>
        <description>Comma-separated list of Object ID&apos;s affected by this action.</description>
        <label>Object IDs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>wkcc__ObjectName__c</fullName>
        <description>Object Name being saved in this action (for DML).</description>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkcc__Package__c</fullName>
        <description>Denotes which package generated the log event</description>
        <label>Package</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkcc__ResponseJson__c</fullName>
        <description>JSON String for debugging API calls.</description>
        <label>API Response</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>wkcc__StackTrace__c</fullName>
        <description>Stack Trace (for exceptions).</description>
        <label>Stack Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>wkcc__User__c</fullName>
        <description>Current user when the log event occurred</description>
        <label>User</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Command Center Log Event</label>
    <pluralLabel>Command Center Log Events</pluralLabel>
</CustomObject>